added cloud feature

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,11 @@ a {
   height: 1000px;
   background-color: aqua;
 }
+
+.cloudArray {
+  color: blue;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding-left: 15px;
+  
+}
